# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  diff_tree.py  format_json.py  format_plain.py  format_stylish.py  formatting.py  generate_diff.py  parse_cli.py  parse_data.py
gendiff/formats/: __init__.py  format_json.py  format_plain.py  format_stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: json_format_result.json
