[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff Compares two configuration files and shows a difference."
authors = ["Denis Bolshakov <dreu007@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
